--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "format:check": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.10.2",
     "clsx": "^2.1.1",
     "clxx": "^2.1.3",
+    "framer-motion": "^12.23.22",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "next": "15.5.4",
     "next-sanity": "^11.4.2",
